--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -5,9 +5,9 @@
     font-family: 'Pretendard Variable', Pretendard, sans-serif;
   }
   html {
-    width: 100%;
-    height: 100%;
-    font-size: 62.5%;
+    width: 390px;
+    margin: 0 auto;
+    min-height: 100vh;
   }
   body {
     overflow-x: hidden;
