--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -16,6 +16,11 @@
   body {
     -ms-overflow-style: none;
   }
+  html,
+  body,
+  #root {
+    height: 100%;
+  }
   ::-webkit-scrollbar {
     display: none;
   }
