--- a/src/shared/styles/components.css
+++ b/src/shared/styles/components.css
@@ -1,8 +1,16 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 @layer components {
+  .bg-konkuk-green {
+    @apply bg-[#217446];
+  }
+
+  .text-konkuk-green {
+    @apply text-[#217446];
+  }
+
   .form-wrapper {
-    @apply flex flex-col w-full h-screen justify-center items-center;
+    @apply flex h-screen w-full flex-col items-center justify-center;
   }
 
   .form-input {
@@ -14,12 +22,11 @@
   }
 
   .form-button {
-    @apply bg-green-400  text-white rounded-[1rem] border border-[#f2f2f2] px-[1.6rem] py-[1rem] text-[1.3rem]
-           hover:bg-green-500 disabled:bg-gray-400 disabled:cursor-not-allowed;
+    @apply rounded-[1rem] border border-[#f2f2f2] bg-green-400 px-[1.6rem] py-[1rem] text-[1.3rem] text-white hover:bg-green-500 disabled:cursor-not-allowed disabled:bg-gray-400;
   }
 
   .form-error {
-    @apply text-red-500 text-[1.2rem];
+    @apply text-[1.2rem] text-red-500;
   }
 
   .form-title {
