--- a/src/shared/styles/global.css
+++ b/src/shared/styles/global.css
@@ -9,6 +9,7 @@
     margin: 0 auto;
     min-height: 100vh;
     font-size: 62.5%;
+    background-color: #f8f8f8;
   }
   body {
     overflow-x: hidden;
